find all sku for offer_id