@@ -18,14 +18,12 @@ import java.util.List;
 @SpringBootTest
 class ConsulApplicationTests {
 
-
-
     @Test
     void contextLoads() {
     }
 
     @Test
-    void Transactions(){
+    void Transactions() {
         final OZON_Api api = new OZON_Api();
         api.setHeaders("ace0b5ec-e3f6-4eb4-a9a6-33a1a5c84f66", "350423");
 
@@ -34,13 +32,12 @@ class ConsulApplicationTests {
 
         OZON_TransactionReport reports = api.getTransactionReport(
                 "2024-01-01T00:00:00.000Z", "2024-01-31T00:00:00.000Z", opT, "all");
-
         Long sku1 = 477040103L;
         Long sku2 = 477040104L;
         double sum = 0;
-        for(OZON_TransactionReport.Operation operation: reports.getResult().getOperations()){
-            Long sku = operation.getItems().getFirst().getSku();
-            if( sku.equals(sku1)  || sku.equals(sku2) ){
+        for (OZON_TransactionReport.Operation operation : reports.getResult().getOperations()) {
+            Long sku = operation.getItems().get(0).getSku();
+            if (sku.equals(sku1) || sku.equals(sku2)) {
                 sum += operation.getAmount();
             }
         }
@@ -58,6 +55,8 @@ class ConsulApplicationTests {
 
         OZON_SkuProductsReport report = api.getProductInfo((List<Long>) skus);
         System.out.println(report.findBySku(477040103L).getOffer_id());
+        System.out.println(report.getSkuListByOfferId());
+
     }
 
     @Test
@@ -81,7 +80,6 @@ class ConsulApplicationTests {
         ArrayList<String> operationTypes=new ArrayList<>();
         operationTypes.add("MarketplaceRedistributionOfAcquiringOperation");
         OZON_TransactionReport report =  api.getTransactionReport("2024-01-01T00:00:00.000Z","2024-01-31T00:00:00.000Z", operationTypes,"other");
-        System.out.println(report.toString());
     }
 
     @Test
